logs are now working. The library support logs and notifications. The models are up-to date
