# src/memex_logging/models/log.py
@@ -5,36 +5,44 @@ import logging
 
 class Log:
 
-    def __init__(self, log_id: str, severity: str, log_content: str, timestamp: str, authority: str, resolution: dict, message_id: str, bot_version: str, device: dict, metadata: dict, project: str) -> None:
+    def __init__(self, log_id: str, project: str, component: str, authority: str, severity: str, log_content: str, timestamp: str, bot_version: str, metadata: dict) -> None:
         self.id = log_id
+        self.project = project
+        self.component = component
+        self.authority = authority
         self.severity = severity
         self.log_content = log_content
         self.timestamp = timestamp
-        self.authority = authority
-        self.resolution = resolution
-        self.message_id = message_id
         self.bot_version = bot_version
-        self.device = device
         self.metadata = metadata
-        self.project = project
 
     def to_repr(self) -> dict:
         return {
             'logId': self.id,
+            'project': self.project,
+            'component': self.component,
+            'authority': self.authority,
             'severity': self.severity,
             'logContent': self.log_content,
             'timestamp': self.timestamp,
-            'authority': self.authority,
-            'resolution': self.resolution,
-            'messageId': self.message_id,
             'botVersion': self.bot_version,
-            'device': self.device,
-            'metadata': self.metadata,
-            'project': self.project
+            'metadata': self.metadata
         }
 
     @staticmethod
     def from_rep(data: dict) -> Log:
+
+        if 'logId' not in data:
+            logging.error("MODEL.LOG logId must be defined")
+            raise ValueError("logId must be defined")
+
+        if 'project' not in data:
+            logging.error("MODEL.LOG project must be defined")
+            raise ValueError("project must be defined")
+
+        if 'component' not in data:
+            logging.error("MODEL.LOG component must be defined")
+            raise ValueError("component must be defined")
 
         if 'severity' not in data:
             logging.error("MODEL.LOG severity must be defined")
@@ -48,57 +56,17 @@ class Log:
             logging.error("MODEL.LOG timestamp must be defined")
             raise ValueError("timestamp must be defined")
 
-        if 'authority' not in data:
-            logging.error("MODEL.LOG timestamp must be defined")
-            raise ValueError("timestamp must be defined")
-
-        if 'logId' not in data:
-            logging.error("MODEL.LOG logId must be defined")
-            raise ValueError("logId must be defined")
-
-        if 'project' not in data:
-            logging.error("MODEL.LOG project must be defined")
-            raise ValueError("project must be defined")
-
-        message_id = None
-        resolution = None
         bot_version = None
-        device = None
         metadata = None
+        authority = None
 
-        if 'resolution' in data:
-            if isinstance(data['resolution'], dict):
-                resolution = data['resolution']
-            else:
-                logging.error("resolution should be a dict")
-                raise ValueError("resolution should be a dict")
+        if 'authority' in data:
+            authority = data['authority']
 
         if 'botVersion' in data:
-            if isinstance(data['botVersion'], str):
-                bot_version = data['botVersion']
-            else:
-                logging.error("botVerion should be a string")
-                raise ValueError("botVerion should be a string")
-
-        if 'messageId' in data:
-            if isinstance(data['messageId'], str):
-                bot_version = data['messageId']
-            else:
-                logging.error("messageId should be a string")
-                raise ValueError("messageId should be a string")
-
-        if 'device' in data:
-            if isinstance(data['device'], dict):
-                device = data['device']
-            else:
-                logging.error("device should be a dict")
-                raise ValueError("device should be a dict")
+            bot_version = data['botVersion']
 
         if 'metadata' in data:
-            if isinstance(data['metadata'], dict):
-                metadata = data['metadata']
-            else:
-                logging.error("metadata should be a dict")
-                raise ValueError("metadata should be a dict")
+            metadata = data['metadata']
 
-        return Log(data['logId'], data['severity'], data['logContent'], data['timestamp'], data['authority'], resolution, message_id, bot_version, device, metadata, data['project'])
+        return Log(data['logId'],str(data['project']).lower(),str(data['component']).lower(),authority, str(data['severity']).upper(),data['logContent'],data['timestamp'],bot_version,metadata)
